DeveloperOrg/force-app/main/default/objects/patient__c/patient__c.object-meta.xml
<CustomObject>
    <label>patient</label>
    <nameField>
        <label>Pasitent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>patient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>