DeveloperOrg/force-app/main/default/objects/patient__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>