DeveloperOrg/force-app/main/default/objects/patient__c/fields/S_NO__c.field-meta.xml
<CustomField>
    <fullName>S_NO__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>S.NO</label>
    <type>AutoNumber</type>
</CustomField>